--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-1.59MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇨🇳 中国-9.81MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: c3c448da2363a6f7, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.16MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-9.48MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: ffec9f6ea19e1dd1, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.57MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-830.4KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.34MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-317.0KB/s(Youtube:不良林), server: gycd1.csccdd.xyz, port: 52340, type: vmess, uuid: 1dc13504-e4ba-3c49-8e0b-6a3eb4e40335, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: gycd1.csccdd.xyz}}
-  - {name: 🇺🇸 美国-3.63MB/s(Youtube:不良林), server: 107.167.24.6, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-469.7KB/s(Youtube:不良林), server: 43.128.253.82, port: 31372, type: vmess, uuid: 2a9056a7-bf92-40c8-f155-1e14aac9beba, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.72MB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20006, type: trojan, password: 2c100ffe-4f52-4133-8c5c-d053fed7b270, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-296.4KB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20009, type: trojan, password: 2c100ffe-4f52-4133-8c5c-d053fed7b270, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.20MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.65MB/s(Youtube:不良林), server: zj.haojiahuo.ml, port: 30069, type: vmess, uuid: 0bff49b2-6e66-3572-897b-9d16ce612965, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /videos, ws-headers: {Host: zj.haojiahuo.ml}}
+  - {name: 🇺🇸 美国-542.9KB/s(Youtube:不良林), server: 107.167.24.6, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-578.6KB/s(Youtube:不良林), server: app.ssfree.ru, port: 443, type: vmess, uuid: a309dd1a-e7a8-11ec-94df-000017022008, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /getweather, ws-headers: {Host: app.ssfree.ru}}
+  - {name: 🇨🇳 中国-319.4KB/s(Youtube:不良林), server: zj.haojiahuo.ml, port: 30044, type: vmess, uuid: 0bff49b2-6e66-3572-897b-9d16ce612965, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /videos, ws-headers: {Host: zj.haojiahuo.ml}}
+  - {name: 🇭🇰 香港-1.51MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇮🇳 印度-640.6KB/s(Youtube:不良林), server: jgwhdlb4.gaox.ml, port: 443, type: trojan, password: 081a4198-d664-4bc5-a7c6-e35982da964b, sni: jgwhdlb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.28MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.57MB/s(Youtube:不良林)
-      - 🇩🇪 德国-830.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
-      - 🇯🇵 日本-469.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-296.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-542.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-578.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-319.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.51MB/s(Youtube:不良林)
+      - 🇮🇳 印度-640.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-1.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.57MB/s(Youtube:不良林)
-      - 🇩🇪 德国-830.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
-      - 🇯🇵 日本-469.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-296.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-542.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-578.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-319.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.51MB/s(Youtube:不良林)
+      - 🇮🇳 印度-640.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.57MB/s(Youtube:不良林)
-      - 🇩🇪 德国-830.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
-      - 🇯🇵 日本-469.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-296.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-542.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-578.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-319.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.51MB/s(Youtube:不良林)
+      - 🇮🇳 印度-640.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-1.51MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-1.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.57MB/s(Youtube:不良林)
-      - 🇩🇪 德国-830.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
-      - 🇯🇵 日本-469.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-296.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-542.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-578.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-319.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.51MB/s(Youtube:不良林)
+      - 🇮🇳 印度-640.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.57MB/s(Youtube:不良林)
-      - 🇩🇪 德国-830.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
-      - 🇯🇵 日本-469.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-296.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-542.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-578.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-319.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.51MB/s(Youtube:不良林)
+      - 🇮🇳 印度-640.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.57MB/s(Youtube:不良林)
-      - 🇩🇪 德国-830.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
-      - 🇯🇵 日本-469.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-296.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-542.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-578.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-319.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.51MB/s(Youtube:不良林)
+      - 🇮🇳 印度-640.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.57MB/s(Youtube:不良林)
-      - 🇩🇪 德国-830.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
-      - 🇯🇵 日本-469.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-296.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-542.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-578.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-319.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.51MB/s(Youtube:不良林)
+      - 🇮🇳 印度-640.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
