--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇰🇷 韩国-1.57MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
   - {name: 🇫🇷 法国-1.32MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇩🇪 德国-2.04MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-877.4KB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20009, type: trojan, password: 2c100ffe-4f52-4133-8c5c-d053fed7b270, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.00MB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20004, type: trojan, password: 2c100ffe-4f52-4133-8c5c-d053fed7b270, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.21MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.21MB/s(Youtube:不良林) 2, server: au2-3.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-3.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-1.57MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.10MB/s(Youtube:不良林), server: au2-3.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-3.nigirocloud.com, skip-cert-verify: true}
   - {name: 🇺🇸 美国-3.11MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
   - {name: 🇨🇳 中国-749.3KB/s(Youtube:不良林), server: cm-gz.okvpn.xyz, port: 20006, type: trojan, password: 2c100ffe-4f52-4133-8c5c-d053fed7b270, sni: cm-gz.okvpn.xyz, skip-cert-verify: true}
   - {name: 🇭🇰 香港-451.6KB/s(Youtube:不良林), server: www.anlocl.gq, port: 10330, type: vmess, uuid: 6efebf2f-e675-4798-a3f0-c9b225701800, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: www.anlocl.gq}}
   - {name: 🇨🇳 中国-986.2KB/s(Youtube:不良林), server: zj.haojiahuo.ml, port: 30044, type: vmess, uuid: 0bff49b2-6e66-3572-897b-9d16ce612965, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /videos, ws-headers: {Host: zj.haojiahuo.ml}}
+  - {name: 🇸🇬 新加坡-1.34MB/s(Youtube:不良林), server: 103.172.116.113, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-1.57MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-877.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.21MB/s(Youtube:不良林) 2
+      - 🇰🇷 韩国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
       - 🇨🇳 中国-749.3KB/s(Youtube:不良林)
       - 🇭🇰 香港-451.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-986.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.34MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇰🇷 韩国-1.57MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-877.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.21MB/s(Youtube:不良林) 2
+      - 🇰🇷 韩国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
       - 🇨🇳 中国-749.3KB/s(Youtube:不良林)
       - 🇭🇰 香港-451.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-986.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.34MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-1.57MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-877.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.21MB/s(Youtube:不良林) 2
+      - 🇰🇷 韩国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
       - 🇨🇳 中国-749.3KB/s(Youtube:不良林)
       - 🇭🇰 香港-451.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-986.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.34MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇰🇷 韩国-1.57MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-877.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.21MB/s(Youtube:不良林) 2
+      - 🇰🇷 韩国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
       - 🇨🇳 中国-749.3KB/s(Youtube:不良林)
       - 🇭🇰 香港-451.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-986.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.34MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-1.57MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-877.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.21MB/s(Youtube:不良林) 2
+      - 🇰🇷 韩国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
       - 🇨🇳 中国-749.3KB/s(Youtube:不良林)
       - 🇭🇰 香港-451.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-986.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.34MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇰🇷 韩国-1.57MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-877.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.21MB/s(Youtube:不良林) 2
+      - 🇰🇷 韩国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
       - 🇨🇳 中国-749.3KB/s(Youtube:不良林)
       - 🇭🇰 香港-451.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-986.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.34MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇰🇷 韩国-1.57MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.32MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-877.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.21MB/s(Youtube:不良林) 2
+      - 🇰🇷 韩国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
       - 🇨🇳 中国-749.3KB/s(Youtube:不良林)
       - 🇭🇰 香港-451.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-986.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.34MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
